--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "LearnQ-tests",
   "version": "1.0.0",
@@ -18,7 +17,9 @@
     "chokidar-cli": "^3.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
-    "vitest": "^1.3.1",
     "vitest-environment-clarinet": "^2.0.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   }
 }
